[tool.poetry]
name = "hero-siege-stats"
version = "0.1.0"
description = ""
authors = ["Guilherme Faga <firiguito@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scapy = "^2.5.0"
pyside6 = "^6.5.3"
pyinstaller = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
